# mspelling

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  LICENSE.rst  README.md  README.org  audio.py  data.py  interface.py  intervention.py  iofiles.py  mspelling.py  mspellingroot.kv  pyproject.toml  pyspell.py  scoring.py  setup.py  spelling_measure.py  storage.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  linting.yml  release-drafter.yml  release_pypi.yml  security.yml  tests.yml
Stimuli/words/: practice.xlsx  worksheet_1.xlsx  worksheet_10.xlsx  worksheet_11.xlsx  worksheet_12.xlsx  worksheet_13.xlsx  worksheet_14.xlsx  worksheet_2.xlsx  worksheet_3.xlsx  worksheet_4.xlsx  worksheet_5.xlsx  worksheet_6.xlsx  worksheet_7.xlsx  worksheet_8.xlsx  worksheet_9.xlsx
docs/: conf.py  contributing.rst  design.org  index.rst  installation.rst  pyproject.toml  release_guide.md  requirements.txt  usage.rst  ~$gui design.pptx
docs/_build/: .buildinfo  CODE_OF_CONDUCT.html  changelog.html  contributing.html  contributors.html  genindex.html  index.html  installation.html  license.html  objects.inv  readme.html  release_guide.html  search.html  searchindex.js  usage.html
docs/design/: design.plantuml  design.rst  gui design.pptx
flutter_version/mspelling/: README.md
mspelling/: .packages  LICENSE  README.md  __main__.py  analysis_options.yaml  goodbyescreen.kv  homescreen.kv  homescreen.py  loginscreen.kv  main.py  mspelling.kv  mspellingroot.kv  mspellingroot.py  pubspec.yaml  results.py  settings.py  spellingactivity.py  welcomescreen.kv  worksheet.py
mspelling/.dart_tool/: package_config.json  package_config_subset  version
mspelling/data/: pubspec.yaml
mspelling/docs/: contributing_guide.rst  index.rst  installation.rst  pyproject.toml  requirements.txt  tasks.py
mspelling/lib/: app.dart  constants.dart  data.dart  data.g.dart  errors.dart  main.dart  models.dart  routes.dart  setup_manager.dart  stim.dart  styles.dart
mspelling/linux/: CMakeLists.txt  my_application.cc
mspelling/stimuli/: .metadata  pubspec.yaml
mspelling/test/: data_test.dart  models_test.dart  stim_test.dart  widget_test.dart
mspelling/ui/: beginmessagescreen.kv  beginmessagescreen.py  elements.kv  endscreen.kv  endscreen.py  goodbyescreen.py  loginscreen.kv  loginscreen.py  mspelling.kv  savescreen.kv  savescreen.py  spellingactivity.kv  spellingactivity.py  startscreen.kv  startscreen.py  themebutton.kv  welcomescreen.kv  welcomescreen.py
mspelling/web/: index.html  manifest.json
python_version/: CHANGELOG.md  README.md  pyproject.toml  tasks.py
python_version/docs/: conf.py
tests/: __init__.py  test_cli.py  test_results.py  test_worksheet.py
(+237 files in other folders)
