[tool.poetry]
name = "mspelling"
version = "0.2.0"
authors = ["Mario E. Bermonti Pérez"]

description = "Program to measure spelling skills in Spanish"
readme = "README.md"
repository = "https://github.com/mario-bermonti/mspelling"
license = "GPL-3"

keywords = ["research", "spelling", "assessment", "science"]

classifiers=["Intended Audience :: Science/Research"]

[tool.poetry.scripts]
mspelling = 'mspelling.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
numpy = "^1.19.4"
xlrd = "^1.2.0"
Kivy = "^2.0.0"
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
