
[tool.poetry]
name = "mspelling"
version = "0.3.0"
description = "Measure of Spanish spelling skills"
authors = ["Mario E. Bermonti Pérez <mbermonti1132@gmail.com>"]


readme = "README.md"
homepage = "https://github.com/mario-bermonti/mspelling"
repository = "https://github.com/mario-bermonti/mspelling"
documentation = "https://mspelling.readthedocs.io"
keywords = ["mspelling"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Natural Language :: English",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mario-bermonti/mspelling/issues"

[tool.poetry.scripts]
mspelling = "mspelling.main:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
# testing
pytest = "^6.2.4"
pytest-cov = "^3.0.0"
xdoctest = "^0.15.4"

# docs
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
autodocsumm = "^0.2.4"
recommonmark = "^0.7.1"

# multi-purpose or other
pre-commit = "^2.18.1"
invoke = "^1.5.0"
bump2version = "^1.0.1"
watchdog = {version = "^2.0.2", extras = ["watchmedo"]}
sphinx-markdown-tables = "^0.0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
